# zix

src/libstore/: build.zig  meson.build  package.nix
src/libstore/linux/: meson.build
src/libstore/unix/: meson.build
src/libstore/windows/: meson.build
src/libutil/: meson.build
src/libutil-c/: build.zig  meson.build
src/libutil/linux/: meson.build
src/libutil/unix/: meson.build
src/libutil/windows/: meson.build
